test/parser/mutable-without-rparen.delta
// RUN: not %delta -parse %s | %FileCheck %s

// CHECK: [[@LINE+1]]:25: error: expected ')', got ';'
var p: mutable(int**?**?;
